# stable-virtual-camera

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLI_GUIDE.md  GLI_GUIDE.md  GR_GUIDE.md  INSTALL_GUIDE.md  LICENSE  LICENSE.txt  README.md  demo.py  demo_gr.py  demo_gr_jam.py  pyproject.toml  setup.sh  tmp.py  tmp0_1.py  tmp0_2.py  tmp0_3.py  tmp2.py  tmp3.py  tmp4.py  tmp5.py
scena/: _sgm_impl.py  gui.py  model.py  sampling.py  utils.py
scena/modules/: autoencoder.py  conditioner.py  layers.py  transformer.py
seva/: _sgm_impl.py  data_io.py  eval.py  geometry.py  gui.py  sampling.py  utils.py
seva/modules/: autoencoder.py  layers.py  preprocessor.py
stableviews/: _sgm_impl.py  eval.py  geometry.py  gui.py  model.py  sampling.py  utils.py
stableviews/modules/: layers.py  preprocessor.py
static/: 1739179267.html  1739179273.html  1739179274.html  1739179275.html  1739179413.html
tests/: demo_gr_sgm.py  demo_gr_sgm_single_img.py  test_check_all.py  test_check_conditioner.py  test_check_model.py  test_check_sampling.py  test_demo_ui.py  test_model.py  test_sgm_single_img.py  test_single_img.py
