[build-system]
requires = ["setuptools>=65.5.3"]
build-backend = "setuptools.build_meta"

[project]
name = "seva"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "roma",
    "viser",
    "tyro",
    "ninja",
    "gradio",
    "einops",
    "colorama",
    "splines",
    "kornia",
    "open-clip-torch",
    "diffusers",
    "numpy",
    "imageio[ffmpeg]",
    "huggingface-hub",
    "opencv-python",
]

[project.optional-dependencies]
dev = ["ruff", "ipdb", "pytest", "line_profiler", "pre-commit"]

[tool.setuptools.packages.find]
include = ["seva"]

[tool.pyright]
extraPaths = ["third_party/dust3r"]
